<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingsNavHeight"
        android:elevation="@dimen/len_2"
        android:outlineProvider="bounds"
        android:background="@color/colorWhite"
        tools:targetApi="lollipop">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/statusBarSize"
            android:orientation="vertical"
            android:paddingLeft="@dimen/len_4"
            android:paddingRight="@dimen/len_4">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/len_4"
                android:layout_marginEnd="@dimen/len_40"
                android:layout_marginRight="@dimen/len_40"
                android:layout_marginTop="@dimen/len_4"
                android:paddingBottom="@dimen/len_4"
                android:paddingEnd="@dimen/len_20"
                android:paddingLeft="@dimen/len_4"
                android:paddingRight="@dimen/len_20"
                android:paddingStart="@dimen/len_4"
                android:paddingTop="@dimen/len_4"
                android:scaleType="centerCrop"
                android:text="@string/settings"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/font_35" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/len_60"
                android:layout_gravity="bottom|center_vertical"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_account"
                    android:drawablePadding="@dimen/len_10"
                    android:text="@string/account"
                    android:textColor="@color/colorPrimary"
                    android:padding="@dimen/len_10"
                    android:textSize="@dimen/font_20"
                    android:layout_gravity="center_vertical|start"
                    android:gravity="center_vertical"
                    android:drawableStart="@drawable/ic_account" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/len_50"
                    android:layout_height="@dimen/len_50"
                    android:paddingRight="@dimen/len_15"
                    android:src="@mipmap/default_portrait"
                    android:layout_gravity="center_vertical"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_overlay="true"
                    app:civ_border_width="1dp"/>

            </LinearLayout>

        </FrameLayout>

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--todo  加入一个border -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_60"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:padding="@dimen/len_8"
            android:elevation="2dp"
            tools:ignore="UnusedAttribute">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_theme"
                android:background="@color/colorWhite"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textSize="@dimen/len_20"
                android:padding="@dimen/len_8"
                android:drawablePadding="@dimen/len_10"
                android:text="@string/theme"
                android:drawableStart="@drawable/ic_theme"
                tools:ignore="SpUsage" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/len_50"
                android:layout_height="@dimen/len_50"
                android:paddingRight="@dimen/len_10"
                android:src="@drawable/ic_day"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_60"
            android:drawableLeft="@drawable/ic_notification"
            android:text="@string/notification"
            android:theme="@style/settingsTextStyle"
            android:drawableStart="@drawable/ic_notification" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_60"
            android:drawableLeft="@drawable/ic_payment"
            android:text="@string/payment"
            android:theme="@style/settingsTextStyle"
            android:drawableStart="@drawable/ic_payment" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_60"
            android:drawableLeft="@drawable/ic_language"
            android:text="@string/notification"
            android:theme="@style/settingsTextStyle"
            android:drawableStart="@drawable/ic_language" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_60"
            android:drawableLeft="@drawable/ic_about"
            android:text="@string/about"
            android:theme="@style/settingsTextStyle"
            android:drawableStart="@drawable/ic_about" />


    </LinearLayout>


</android.support.v7.widget.LinearLayoutCompat>